Thu Mar 19 18:11:51 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* {job,backend,node}/addins.rb: ディレクトリ構成が変わったのに対応

Thu Mar 19 17:32:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: version.rbの位置が変わったのに対応
	* bin/*: $0 を設定
	* bin/{master,node}: オプション -h, -m, -p を追加
	* master.rb, node.rb, controller.rb, processor.rb, fairy.rb:
	  fairyとRubyのバージョンを表示するようにした.

Thu Mar 19 16:59:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* tools/git-tag: ディレクトリ構成変更に伴い変更

Thu Mar 19 16:52:56 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: 第一段完了
	* fairy.rb, conf.rb, fairy.conf: CONF.DEBUG_MONITOR_ON追加

Wed Mar 18 18:51:25 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: その2

Wed Mar 18 18:45:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: その1

Wed Mar 18 18:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node/njob.rb, node/port.rb, processor.eb:  [要求: #20]
	* backend/b-file-output.rb, backend/b-local-file-output.rb: [Bug: #49]

Mon Mar 16 15:51:16 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [Bug: #43], [Bug: #44] 対応
	
Wed Mar 11 19:08:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb: [Bug: #21]対応
	* bin/controller, bin/master, bin/node, bin/controller,
	  bin/processor, fairy.rb, fairy.conf, conf.rb:
	  CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION 対応
	* bin/controller, bin/master, bin/node, bin/controller,
	  bin/processor, fiary.rb, fairy.conf, conf.rb:
	  CONF.USE_RESOLV_REPLACE 対応
	* Master#node: [Bug: #22]対応
	* Log::log: 新forwardable対応
	* conf.rb: fairy.conf 読み込み時に環境変数 FAIRY_HOME を見るように
	  した.
	
Thu Mar  5 18:00:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, etc/fairy.conf, conf.rb: 進行状況Logging機能追加

Wed Mar  4 18:17:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-rm: 追加

Wed Mar  4 16:49:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/exec.rb, backend/b-exec.rb, node/n-exec.rb: exec追加
