@@ -2,62 +2,65 @@
 # encoding: UTF-8
 
 module Fairy
-  CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
+
+## Double sharp comment is a system default value.
+
+##CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
 
   CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev" 
   CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
 
+##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
   CONF.MASTER_HOST = "emperor2"
-  CONF.MASTER_PORT = "19999"
+##CONF.MASTER_PORT = "19999"
 
-  CONF["emperor2"].HOME = File.expand_path(".")
-  CONF["gentoo"].HOME = File.expand_path(".")
-  CONF.HOME = ENV["FAIRY_HOME"]
-  CONF.BIN = CONF.HOME+"/bin"
-  CONF.LIB = CONF.HOME+"/lib"
+  CONF["emperor2"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
+  CONF["gentoo"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
 
-  CONF.CONTROLLER_BIN = CONF.BIN+"/controller"
-  CONF.PROCESSOR_BIN = CONF.BIN+"/processor"
+##CONF.HOME = ENV["FAIRY_HOME"]
+##CONF.BIN = CONF.HOME+"/bin" 
+##CONF.LIB = CONF.HOME+"/lib"
 
-  CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
-  CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+##CONF.CONTROLLER_BIN = CONF.BIN+"/controller"
+##CONF.PROCESSOR_BIN = CONF.BIN+"/processor"
 
-  CONF.N_MOD_GROUP_BY = 5
-  CONF.HASH_MODULE = "fairy/share/hash-md5"
-  CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
-  CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
+##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
+##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
+##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
-  CONF.SORT_SAMPLING_MIN = 100
-  CONF.SORT_SAMPLING_MAX = 10000
-  CONF.SORT_SAMPLING_RATIO_1_TO = 100
-  CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
+##CONF.N_MOD_GROUP_BY = 5
+##CONF.HASH_MODULE = "fairy/share/hash-md5"
+##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
+##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
+##CONF.SORT_SAMPLING_MIN = 100
+##CONF.SORT_SAMPLING_MAX = 10000
+##CONF.SORT_SAMPLING_RATIO_1_TO = 100
+##CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
+
+##CONF.VF_ROOT = CONF.HOME+"/Repos"
   CONF.VF_ROOT = CONF.HOME+"/test/Repos"
-  CONF.VF_PREFIX = `hostname`.chomp
-  CONF.VF_SPLIT_SIZE = 64*1024*1024
+##CONF.VF_PREFIX = `hostname`.chomp 
+#- CONF.VF_PREFIX use client setting.
+#  (ja_JP.utf-8: CONF.VF_PREFIXはクライアントのものが使われる)
+##CONF.VF_SPLIT_SIZE = 64*1024*1024
 
-  CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
+##CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
 
-  CONF.LOG_FILE = "/tmp/fairy/log"
-  CONF.LOG_FLUSH_INTERVAL = 1
-  CONF.LOG_LEVEL = :DEBUG
-  CONF.LOG_IMPORT_NTIMES_POP = 1000
+##CONF.LOG_FILE = "/tmp/fairy/log"
+##CONF.LOG_FLUSH_INTERVAL = 1
+##CONF.LOG_LEVEL = :DEBUG
+##CONF.LOG_IMPORT_NTIMES_POP = 1000
 
-  CONF.USE_RESOLV_REPLACE = false
+##CONF.USE_RESOLV_REPLACE = false
 
-  CONF.DEBUG_PORT_WAIT = false
-  CONF.DEBUG_FULL_BACKTRACE = false
-  CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-  CONF.DEBUG_MONITOR_ON = false
+##CONF.DEBUG_PORT_WAIT = false
+##CONF.DEBUG_FULL_BACKTRACE = false
+##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
+##CONF.DEBUG_MONITOR_ON = false
 
-# CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
-# CONF.PROCESS_LIFE_MANAGE_INTERVAL = 10
-# CONF.PROCESS_LIFE_MANAGE_INTERVAL = 1
-  CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
-
-#  CONF.THREAD_STACK_SIZE = 1024*100
+##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
 
 end
 
